attached_assets/Pasted--scripts-final-script-sh-videos-demo-txt-0it-00-00-it-s-workspace-MotionVectorization-RAFT-core-1757495382338_1757495382339.txt
./scripts/final_script.sh videos/demo.txt
0it [00:00, ?it/s]/workspace/MotionVectorization/RAFT/core/raft.py:99: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.
  with autocast(enabled=self.args.mixed_precision):
/workspace/MotionVectorization/RAFT/core/raft.py:110: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.
  with autocast(enabled=self.args.mixed_precision):
/usr/local/lib/python3.11/dist-packages/torch/functional.py:554: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at /pytorch/aten/src/ATen/native/TensorShape.cpp:4314.)
  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]
/workspace/MotionVectorization/RAFT/core/raft.py:127: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.
  with autocast(enabled=self.args.mixed_precision):
/usr/local/lib/python3.11/dist-packages/torch/nn/functional.py:5015: UserWarning: Default grid_sample and affine_grid behavior has changed to align_corners=False since 1.3.0. Please specify align_corners=True if the old behavior is desired. See the documentation of grid_sample for details.
  warnings.warn(
10it [00:01,  6.39it/s]
001.npy  002.npy  003.npy  004.npy  005.npy  006.npy  007.npy  008.npy  009.npy  010.npy
Processing video: demo
PREPROCESS
RAFT
0it [00:00, ?it/s]/workspace/MotionVectorization/RAFT/core/raft.py:99: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.
  with autocast(enabled=self.args.mixed_precision):
/workspace/MotionVectorization/RAFT/core/raft.py:110: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.
  with autocast(enabled=self.args.mixed_precision):
/usr/local/lib/python3.11/dist-packages/torch/functional.py:554: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at /pytorch/aten/src/ATen/native/TensorShape.cpp:4314.)
  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]
/workspace/MotionVectorization/RAFT/core/raft.py:127: FutureWarning: `torch.cuda.amp.autocast(args...)` is deprecated. Please use `torch.amp.autocast('cuda', args...)` instead.
  with autocast(enabled=self.args.mixed_precision):
/usr/local/lib/python3.11/dist-packages/torch/nn/functional.py:5015: UserWarning: Default grid_sample and affine_grid behavior has changed to align_corners=False since 1.3.0. Please specify align_corners=True if the old behavior is desired. See the documentation of grid_sample for details.
  warnings.warn(
100it [00:10,  9.45it/s]
CLUSTER
Configs:
  video_file:   demo.mp4
  video_dir:    videos
  output_dir:   outputs
  start_frame:  0
  max_frames:   100
  bg_file:      None
  bg_thresh:    0.1
  lo_thresh:    30
  hi_thresh:    100
  max_radius:   3
  add_contrast: False
  link: False
  min_cluster_size:     30
  min_density:  0.15
  min_dim:      5
  config:       motion_vectorization/config/demo.json
  blur_kernel:  1
  min_opt_size: 32
  use_gpu:      True
100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 100/100 [00:10<00:00,  9.76it/s]
TRACK
TIME: 2025-09-10 09:09:26.502820
Configs:
  video_file:   demo.mp4
  video_dir:    videos
  output_dir:   motion_vectorization/outputs
  suffix:       None
  config:       motion_vectorization/config/demo.json
  max_frames:   100
  start_frame:  0
  base_frame:   0
  min_cluster_size:     30
  min_density:  0.15
  bg_file:      None
  main_match_thresh:    0.6
  single_match_thresh:  0.2
  num_match_shapes:     5
  fallback_match_thresh:        0.6
  drop_thresh:  0.05
  breaks:       []
  multiply:     False
  all_joint:    False
  manual_init:  False
  hungarian:    False
  min_opt_size: 32
  blur_kernel:  1
  lr:   0.01
  p_weight:     0.1
  n_steps:      50
  use_gpu:      True
  bleed:        50
  overlap_thresh:       0.9
  use_k:        False
  use_r:        False
  use_s:        False
  use_t:        False
  init_r:       False
  init_s:       False
  init_t:       False
  verbose:      False

FRAME 1 (0) CLUSTERS
========================
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "/workspace/MotionVectorization/motion_vectorization/extract_shapes.py", line 1525, in <module>
    main()
  File "/workspace/MotionVectorization/motion_vectorization/extract_shapes.py", line 264, in main
    bgr_mode = cv2.cvtColor(np.uint8(np.array(lab_mode[0])[None, None, ...]), cv2.COLOR_LAB2BGR).squeeze()
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
cv2.error: OpenCV(4.12.0) /io/opencv/modules/imgproc/src/color.simd_helpers.hpp:92: error: (-15:Bad number of channels) in function 'cv::impl::{anonymous}::CvtHelper<VScn, VDcn, VDepth, sizePolicy>::CvtHelper(cv::InputArray, cv::OutputArray, int) [with VScn = cv::impl::{anonymous}::Set<3>; VDcn = cv::impl::{anonymous}::Set<3, 4>; VDepth = cv::impl::{anonymous}::Set<0, 5>; cv::impl::{anonymous}::SizePolicy sizePolicy = cv::impl::<unnamed>::NONE; cv::InputArray = const cv::_InputArray&; cv::OutputArray = const cv::_OutputArray&]'
> Invalid number of channels in input image:
>     'VScn::contains(scn)'
> where
>     'scn' is 1

root@ec25add1092f:/workspace/MotionVectorization# 